[package]
name = "unbase"
version = "0.0.2"
authors = ["Daniel Norman <daniel@gudtech.com>"]
description = "Unbase intends to be a causal, coordination-free distributed data-persistence and application framework. It is fundamentally reactive, fault tolerant, and decentralized."
documentation = "https://docs.rs/unbase/"
homepage = "https://unba.se"
repository = "https://github.com/unbase/unbase"
readme = "README.md"
categories = ["database"]
license = "Apache-2.0"
#build = "build.rs"
exclude = [
    "docs/*",
    "jekyll-docs-template/*",
    "old/*",
    "simulation/*",
    "schema/*"
]

[dependencies]

futures = "0.1.17"
actix = "0.5.5"
itertools = "0.5.9"

sha2 = "0.4.0"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nihdb = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = { git = "https://github.com/koute/stdweb", default-features = true, features=["experimental_features_which_may_break_on_minor_version_bumps"] }

[features]
single_threaded = []

#[build-dependencies]
#capnpc = "0.8"
