[package]
name = "unbase"
version = "0.0.2"
authors = ["Daniel Norman <daniel@gudtech.com>"]
edition = "2018"
description = "Unbase intends to be a causal, coordination-free distributed data-persistence and application framework. It is fundamentally reactive, fault tolerant, and decentralized."
documentation = "https://docs.rs/unbase/"
homepage = "https://unba.se"
repository = "https://github.com/unbase/unbase"
readme = "README.md"
categories = ["database"]
license = "Apache-2.0"
#build = "build.rs"
exclude = [
    "docs/*",
    "jekyll-docs-template/*",
    "old/*",
    "simulation/*",
    "schema/*"
]

[dependencies]

tokio = { version = "0.1.19", features = ["async-await-preview"] }
tokio-async-await = "0.1.7"
futures = "0.1.26"
itertools = "0.8.0"

sha2 = "0.8.0"
serde = "1.0.90"
serde_json = "1.0.39"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]


[target.'cfg(target_arch = "wasm32")'.dependencies]

[features]
single_threaded = []

#[build-dependencies]
#capnpc = "0.8"
